--- a/src/components/Appointment/Appointment.css
+++ b/src/components/Appointment/Appointment.css
@@ -29,7 +29,50 @@
   letter-spacing: 0.12em;
 }
 
-.appointment__img{
+.appointment__img__desktop{
   width: 788px;
   height: 499px;
+}
+
+.appointment__img__mbl{
+  display: none;
+}
+
+@media only screen and (min-width: 0px) and (max-width: 768px) { 
+  .appointment__box{
+    margin-left: 16px;
+    flex-direction: column-reverse;
+  }
+
+  .appointment__head{
+    font-size: 24px;
+    line-height: 29px;
+    margin-top: 24px;
+  }
+
+  .appointment__info{
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .appointment__btn{
+    padding: 18px 41px 18px 42px;
+    margin: 16px;
+  }
+
+  .appointment__btn__text{
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.12em;
+  }
+
+  .appointment__img__desktop{
+    display: none;
+  }
+
+  .appointment__img__mbl{
+    display: block;
+    width: 360px;
+    height: 352px;
+  }
 }
