--- a/src/components/Reviews/Reviews.css
+++ b/src/components/Reviews/Reviews.css
@@ -81,7 +81,7 @@
 }
 
 @media only screen and (min-width: 768px) and (max-width: 2024px) {
-  .slider__mbl{
+  .coverage__area__mbl{
     display: none;
   }
 }
